[Feat]: update avatar farm